Fixes and re-adjustments
- add proper navigation links to the navigation bar and cart page
- edit product page fixes (remove image requirement to use the old image if no new image provided, fix the route)
- admin products page buttons style add the missing class
- add some dummy categories to the aside element in home, admin products
- make the pagination buttons appear at the end of the page
- retrieve orders and products from the last added

--- a/recap/nodejs/recap/section22/public/css/cart_style.css
+++ b/recap/nodejs/recap/section22/public/css/cart_style.css
@@ -53,8 +53,10 @@ main {
 
 }
 
+
 .main__main__content__row1--cart--header {
     /* padding: 1rem 0; */
+    max-width: 800px;
 }
 
 .main__main__content__row1--cart--header h1 {
@@ -64,6 +66,8 @@ main {
 .main__main__content__row1--cart--header a {
     color: var(--product-rating-blue);
     cursor: pointer;
+    text-decoration: none;
+
 }
 
 .main__main__content__row1--cart--list {
