--- a/recap/nodejs/recap/section22/views/shop/all-products.ejs
+++ b/recap/nodejs/recap/section22/views/shop/all-products.ejs
@@ -30,31 +30,55 @@
             <div class="main__main__content">
                 <aside class="main__main__side-list">
                     <h2 class="main__main__side-list--header">
-                        Brand
+                        Find by Category
                     </h2>
                     <ul class="main__main__side-list--list">
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Clothes</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Electronics</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Latest Discounts</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Phone Accessories</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Summer Essentials</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Home & Kitchen</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Child Care Products</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Gaming Essentials</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Gardening Tools</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Learning for Kids</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Books</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> House Decorations</a>
                         </li>
 
                     </ul>
