--- a/recap/nodejs/recap/section22/views/shop/cart.ejs
+++ b/recap/nodejs/recap/section22/views/shop/cart.ejs
@@ -26,7 +26,7 @@
                                 <h1>Your Amazon Cart is empty.</h1>
                                 <p style="margin-top: 0.5rem">
                                     Your shopping basket lives to serve. Give it purpose – fill it with groceries, clothing, household supplies, electronics and more.
-                                    Continue shopping on the <a>amazon.eg homepage</a>, learn about <a>Today's Deals</a>, or visit your <a>Wish List</a>.
+                                    Continue shopping on the <a href="/">amazon.eg homepage</a>, learn about <a href="/">Today's Deals</a>, or visit your <a>Wish List</a>.
                                 </p>
                             <%}%>    
                         </div>
