--- a/recap/nodejs/recap/section22/public/css/admin-products.css
+++ b/recap/nodejs/recap/section22/public/css/admin-products.css
@@ -564,6 +564,7 @@ main {
         align-items: flex-start;
         flex: 1;
         padding-right: 0;
+        min-height: 80vh;
         
     }
 
