--- a/recap/nodejs/recap/section22/views/admin/admin-products.ejs
+++ b/recap/nodejs/recap/section22/views/admin/admin-products.ejs
@@ -33,31 +33,55 @@
             <div class="main__main__content">
                 <aside class="main__main__side-list">
                     <h2 class="main__main__side-list--header">
-                        Brand
+                        Find by Category
                     </h2>
                     <ul class="main__main__side-list--list">
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Clothes</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Electronics</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Latest Discounts</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Phone Accessories</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Summer Essentials</a>
                         </li>
 
                         <li class="main__main__side-list--list-item">
-                            <a href="" class="main__main__side-list--list--item-link"> Link</a>
+                            <a href="" class="main__main__side-list--list--item-link"> Home & Kitchen</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Child Care Products</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Gaming Essentials</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Gardening Tools</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Learning for Kids</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> Books</a>
+                        </li>
+
+                        <li class="main__main__side-list--list-item">
+                            <a href="" class="main__main__side-list--list--item-link"> House Decorations</a>
                         </li>
 
                     </ul>
@@ -162,16 +186,18 @@
                                     <!-- <button class="main__main__products-list--item--description-buttons-add" aria-label="control, Add to stock">Stock</button>
                                     <button class="main__main__products-list--item--description-buttons-edit" aria-label="control, edit product">Edit</button>
                                     <button class="main__main__products-list--item--description-buttons-delete" aria-label="control, delete product">Delete</button> -->
-                                    <button class="white-button-admin" aria-label="control, Add to stock"><a href="/admin/edit-product/<%=product._id%>?edit=true">Stock</a></button>
-                                    <button class="white-button-admin" aria-label="control, edit product"><a href="/admin/edit-product/<%=product._id%>?edit=true">Edit</a></button>
-                                        <input type="hidden" value="<%= product._id%>" name="productId">
-
-                                        <!-- //10 -->
-                                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+                                    <div class="main__main__products-list--item--description-buttons">
+                                        <button class="white-button-admin" aria-label="control, Add to stock"><a href="/admin/edit-product/<%=product._id%>?edit=true">Stock</a></button>
+                                        <button class="white-button-admin" aria-label="control, edit product"><a href="/admin/edit-product/<%=product._id%>?edit=true">Edit</a></button>
+                                            <input type="hidden" value="<%= product._id%>" name="productId">
+                                            <!-- //10 -->
+                                            <input type="hidden" name="_csrf" value="<%=csrfToken%>">
                                         
-                                        <!-- //-13 -->
-                                        <!-- <button type="submit" class="white-button-admin" aria-label="control, delete product"><a>Delete</a></button> -->
-                                        <button onclick="deleteProduct(this)" type="button" class="white-button-admin" aria-label="control, delete product"><a>Delete</a></button>                      <!-- <button type="submit" class="white-button-admin" aria-label="control, delete product"><a>Delete</a></button> -->
+                                            <!-- //-13 -->
+                                            <!-- <button type="submit" class="white-button-admin" aria-label="control, delete product"><a>Delete</a></button> -->
+                                            <button onclick="deleteProduct(this)" type="button" class="white-button-admin" aria-label="control, delete product"><a>Delete</a></button>                      
+                                            <!-- <button type="submit" class="white-button-admin" aria-label="control, delete product"><a>Delete</a></button> -->
+                                    </div>
 
                                 <!-- </form> -->
 
